# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.
    4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
       It is for convenience. Do not mistake this for the actual file.

  01 Sep 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py:
  Added Michael Stewart's patch correcting optional args being specified 
  via position- bug #61881.

  01 Sep 2004; Brian Harring <ferrignb@gentoo.org> pym/portage.py, 
  pym/portage_exec.py, pym/portage_checksum.py: Restructured spawn
  so that we don't have two versions; all spawn calls trace back to 
  portage_exec.spawn, either through spawn_bash or spawn_sandbox.
  portage_exec.spawn is strictly an os.execve wrapper now, so bash 
  doesn't have to be involved unless desired (if desired use spawn_bash).

  31 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/emerge: Debug
  print statement left in global scope, corrected it.

  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_checksum.py:
  Solar's patch to check if prelink binary exists prior to executing it.

  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_checksum.py:
  Only prelink-check when requested -- This is only valid for merge/unmerge
  operations -- Also happens to fix the access violations in portageq.

  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage.py: Adjustments
  for the prelink-check changes.

  31 Aug 2004; Nicholas Jones <carpaski@gentoo.org> portage_exception.py:
  Made the exceptions more hierarchial. Yes, I'm aware I can't speel.

  30 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/repoman: Added 
  solar's patch to make the file.size check display the size of the 
  offender.

  30 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py, 