@@ -9,6 +9,9 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  01 Sep 2004; Brian Harring <ferringb@gentoo.org> pym/portage_exec.py:
+  Nick caught this- changed setgid/setuid order so it works.
+
   01 Sep 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py:
   Added Michael Stewart's patch correcting optional args being specified 
   via position- bug #61881.
